--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -6,15 +6,15 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/editTexChangePassword"
+        android:id="@+id/editTextCurrentPassword"
         android:layout_width="match_parent"
         android:layout_height="@dimen/input_field_height"
         android:layout_margin="15dp"
         android:background="@drawable/rounded_corners_edittext_dark"
         android:gravity="start|center_vertical"
-        android:hint="Enter Password"
+        android:hint="Enter Current Password"
         android:text=""
-        android:inputType="text|textNoSuggestions"
+        android:inputType="textPassword"
         android:padding="6dp"
         android:textAlignment="viewStart"
         android:textColor="@color/textColorSecondary"
@@ -23,18 +23,65 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/editTextNewPassword"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/input_field_height"
+        android:layout_margin="15dp"
+        android:background="@drawable/rounded_corners_edittext_dark"
+        android:gravity="start|center_vertical"
+        android:hint="Enter New Password"
+        android:text=""
+        android:inputType="textPassword"
+        android:padding="6dp"
+        android:textAlignment="viewStart"
+        android:textColor="@color/textColorSecondary"
+        android:textColorHint="@color/textColorPrimaryDark"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editTextCurrentPassword"
+        tools:ignore="MissingConstraints" />
+    
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/editTextNewConfirmPassword"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/input_field_height"
+        android:layout_margin="15dp"
+        android:background="@drawable/rounded_corners_edittext_dark"
+        android:gravity="start|center_vertical"
+        android:hint="Re-Enter New Password"
+        android:text=""
+        android:inputType="textPassword"
+        android:padding="6dp"
+        android:textAlignment="viewStart"
+        android:textColor="@color/textColorSecondary"
+        android:textColorHint="@color/textColorPrimaryDark"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editTextNewPassword"
+        tools:ignore="MissingConstraints" />
+
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/buttonSubmitProduct"
+        android:id="@+id/buttonChangePassword"
         android:layout_width="match_parent"
         android:layout_height="@dimen/button_height"
         android:layout_margin="15dp"
         android:layout_marginTop="@dimen/button_margin"
         android:background="@drawable/rounded_corners_button"
-        android:text="Update Password"
+        android:text="Change Password"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="@dimen/button_text_size"
         app:backgroundTint="@color/colorAccentGreen"
-        app:layout_constraintTop_toBottomOf="@+id/editTexChangePassword"
+        app:layout_constraintTop_toBottomOf="@+id/editTextNewConfirmPassword"
         tools:layout_editor_absoluteX="0dp" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
